# JANA4ML4FPGA

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.gluon  README.md
.github/worflows/: ci.yaml
.github/workflows/: ci.yaml.bak  codeql.yml.bak  main.yml
.run/: docker-fpgacon.run.xml  gluon200-cdaq.run.xml  gluon200-fpgacon-experiment.run.xml  gluon200-fpgacon-files.run.xml  gluon200-gemrecon.run.xml
.vscode-gluon-example/: c_cpp_properties.json  launch.json  settings.json
cmake/: jana_plugin.cmake
doc/: CODA_online_references.md  dqm.md
docker/: build_images.py
docker/ml4fpga/: Dockerfile
docker/ml4fpga-conda/: Dockerfile  install_conda.py
docker/ml4fpga-pre/: Dockerfile
dqm/: .gitignore  requirements.txt  serve_debug.py
dqm/frontend/: README.md  package.json
dqm/frontend/public/: index.html
dqm/frontend/src/: DqmContext.js  backend.js  backend_pro.js  index.js
dqm/pydqm/: README.md  app.py  histo_api.py
pygemsrs/analysis/: draw_f125_events.py  ml4fpga.py
pygemsrs/webgui/: __init__.py  not_working_dashboard.py  not_working_data_timeline.py  not_working_main.py
pygemsrs/webgui/templates/: base.html  base_try.html  dash_base.html  example.html  index.html  test.html
python/: 2024-03-13_gemsrs_analysis.ipynb  dash_dqm.py  example_gem_cluster_analysis.ipynb  example_gem_cluster_pandas.ipynb  example_print_srs_samples.py  gemsrs_analysis.ipynb  gemsrs_utils.py  ml4fpga.py  process_coffea.py  read_db.py  requirements.txt
resources/test_data/: rawdata_001068_10evt.evio
scripts/: .gitignore  check_double_corruption.py  debug_jana4ml4fpga.py  debug_read_cdaq.py  debug_read_evio.py  example_print_srs_samples.py  gluon_make_links.sh  ml4fpga.py  peak_histo.C  read_evio.py  run_evio.sh  run_list.sh  setup_conda_bash.sh  submit_list.sh  test.sh  trdclass.C
scripts/LIST/: file_fermi.list  file_fermi_3bin.aa  file_fermi_3bin.ab  file_fermi_3bin.ac  file_fermi_3bin.list  file_fermi_6bin.aa  file_fermi_6bin.ab  file_fermi_6bin.ac  file_fermi_6bin.list  file_fermi_6bin.zz
scripts/db/: 2023_fermi_SRSmap0.cfg  2023_fermi_SRSmap1.cfg  2023_fermi_SRSmap2.cfg  2023_fermilab_runs.ods  2023_mapping_GEMTRK.cfg  2023_mapping_HDGEM.cfg  2023_mapping_HDGEM.cfg_BEAM  2023_mapping_fermilab1.cfg  2023_mapping_fermilab3.cfg  2023_mapping_fermilab4.cfg  Config_GEM_TRD_JANA.cfg
scripts/pedestalDir/: pedestal_003075.root  pedestal_003125.root  pedestal_003188.root
src/Executables/test/: jana_input.cc  jana_input.h  jana_tcp.cc  jana_tcp.h
src/Plugins/: CMakeLists.txt
src/Plugins/EVIOParser/: DModuleType.h  README.md
src/Plugins/TestOfflineAnalysis/: TestEventProcessor.h  TestOfflineAnalysis.cc
src/Services/: CMakeLists.txt
src/Services/Log/: CMakeLists.txt  Log_service.cc  Log_service.h
src/Services/OutputRootFile/: CMakeLists.txt  RootFile_service.h
src/executables/: CMakeLists.txt
src/executables/cdaq_block_tester/: BlockExampleProcessor.cc  BlockExampleSource.h  CMakeLists.txt  EVIOBlock.cc  EVIOBlock.h  EVIOBlockProcessor.cc  EVIOBlockProcessor.h  EVIOBlockedEvent.h  EVIOBlockedEventSource.cc  EVIOBlockedEventSource.h  EVIOBlockedSource.cc  EVIOBlockedSource.h  MyBlock.h  MyObject.h  main.cc
src/executables/jana4ml4fpga/: CDAQTopology.h  CMakeLists.txt  EVIOBlockProcessor.cc  EVIOBlockProcessor.h  EVIOBlockedEventFileSource.cc  EVIOBlockedEventFileSource.h  EVIOBlockedEventSource.cc  EVIOBlockedEventSource.h  JANA4ML4FPGA_CLI.cc  JANA4ML4FPGA_CLI.h  PrintUtils.h  main.cc
src/executables/tcp_daq_tester/: CMakeLists.txt  jana_main.cc  tcp_receiver.cc  tcp_receiver.h  tcp_sender.cc
src/extensions/: README.md
src/extensions/jana/: CozyFactory.h  CozyFactoryGeneratorT.h
src/extensions/root/: DirectorySwitcher.h
src/extensions/spdlog/: SpdlogExtensions.h  SpdlogMixin.h
src/jana/: CMakeLists.txt
src/jana/CDAQtcp/: JEventSourceCDAQtcp.cc  tcp_thread.cc  tcp_thread.h
src/jana/EVIOParser/: CMakeLists.txt  JEventSourceEVIOParser.cc  JEventSourceEVIOParser.h  JEventSourceEVIOSource.cc  JEventSourceEVIOSource.h  README.md
src/jana/rawdataparser/: DAQ_init.cc  DEVIOWorkerThread.cc  DEVIOWorkerThread.h  Df250PulseRawData.h  Df250StreamingRawData.h  JFactoryGenerator_DAQ.h  fix_code.sh
src/libraries/: CMakeLists.txt
src/libraries/evio/: CDAQ3WHeader.h  CMakeLists.txt  EVIOBlockedEventFileSource.cc  EVIOBlockedEventFileSource.h  EVIOTCPBlockedEventSource.cc  EVIOTCPBlockedEventSource.h  HDEVIO.cc  HDEVIO.h  README.md  TCP10WHeader.h  async_filebuf.cc
src/libraries/extmath/: Average.h  Peak.h  PeakFinder.h  PeakPair.h  RollingAverage.h  RollingMean.h  (+3 more)
src/libraries/rawdataparser/: CDaqTCPevent.h  CMakeLists.txt  DBORptrs.h  DBeamCurrent_factory.cc  DBeamCurrent_factory.h  DCAEN1290TDCConfig.h  DCODAEventInfo.h  DCODAROCInfo.h  DEPICSvalue.h  DGEMSRSWindowRawData.h  DModuleType.h  DParsedEvent.h  DStatusBits.h  DTSGBORConfig.h  Df125CDCPulse.h  Df125Config.h  Df125FDCPulse.h  Df125PulseIntegral.h  Df125PulseTime.h  Df125WindowRawData.h  Df250AsyncPedestal.h  Df250BORConfig.h  Df250Config.h  Df250PulseData.h  Df250PulseIntegral.h  Df250PulsePedestal.h  Df250PulseRawData.h  Df250PulseTime.h  Df250TriggerTime.h  Df250WindowRawData.h  Df250WindowSum.h  EVIOBlockedEvent.h  EVIOBlockedEventParser.cc  EVIOBlockedEventParser.h  EVIOBlockedEventParserConfig.h  EVIOFileWriter.h  JEventSourceGenerator_EVIOpp.h  JEventSource_EVIOpp.cc  JEventSource_EVIOpp.h  bor_roc.h  (+2 more)
src/plugins/: CMakeLists.txt
src/plugins/CDAQfile/: CDAQEVIOFileSource.cc  CDAQEVIOFileSource.h  CDAQfile.cc  CMakeLists.txt  README.md
src/plugins/CDAQtcp/: CMakeLists.txt  JEventSourceCDAQtcp.cc  JEventSourceCDAQtcp.h  tcp_thread.cc  tcp_thread.h
src/plugins/evio/: CMakeLists.txt
src/services/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/algorithms_test/: CMakeLists.txt  algorithms_test.cc  average_tests.cpp  peak_finder_tests.cpp  rolling_average_tests.cpp  rolling_mean.cpp  rolling_statistics_tests.cpp  standard_deviation_test.cpp
tester/producer/: Makefile  TCPclient.h  evb_test.sh
tester/receiver/: tcp_thread.cc  tcp_thread.h
(+312 files in other folders)
